--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
     <li>git push - толкнуть все закомиченные файлы в репозиторий на гит</li>
     <li>git pull - стянуть проект с гита</li>
     </ul>
-</div>
+</div># 4ebuard.github.io
